# hap-ctf

./: .envrc  .gitignore  Dockerfile  README.md  build.ninja  bwrap.sh  docker.sh  flake.nix  gen-seccomp.c  pyproject.toml  seccomp.json  user_submission.py
.github/workflows/: prune-images.yml  test-and-build.yml
src/hap_ctf/: __init__.py  api.py  config.py  generate_policy.py  run.py
src/submission/: __init__.py
tests/: test_api.py  test_archives.py
