[project]
name = "hap_ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.63.2",
]

[project.scripts]
hap_ctf = "hap_ctf:main"

[tool.pyright]
# disable pyright in favor of ruff
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
